# DeepSeek-X

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  config.json  config_example.json  docker-compose.yml  install.bat  install.sh  main.py  pyproject.toml  run.bat  run.sh  setup.bat  setup.sh
clients/: __init__.py  base_client.py  deepseek_client.py  openai_compatible_client.py
combinator/: __init__.py  deepseek_openaicompatible_combinator.py
config/: __init__.py  config_manager.py
frontend/: app.js  index.html  styles.css
process/: __init__.py  deepseek_x_processor.py
utils/: __init__.py  logger.py  validate_apikey.py
workflow/: __init__.py  workflow.py  workflow_info.py
