[project]
name = "deepseek-x"
version = "0.1.0"
description = "DeepSeek X - A powerful AI assistant"
authors = [
    { name = "Minghua YAO", email = "minghuayao1981@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.109.2",
    "uvicorn>=0.27.1",
    "pydantic>=2.6.1",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.9.3",
    "sse-starlette>=1.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = {find = {where = ["."]}}

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.pytest]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[project.urls]
"Homepage" = "https://github.com/yaominghua1981/DeepSeek-X"
"Bug Tracker" = "https://github.com/yaominghua1981/DeepSeek-X/issues"